--- a/.github/workflows/gitea.yml
+++ b/.github/workflows/gitea.yml
@@ -23,6 +23,14 @@ jobs:
         echo ${{ secrets.DOCKER_PASSWORD }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
         docker push ${{ env.DOCKER_NAME }}:${{ env.DOCKER_VERSION }}-${{ env.DOCKER_TAG}}
         docker push ${{ env.DOCKER_NAME }}:latest
+    - name: Docker Hub Description
+      uses: peter-evans/dockerhub-description@v4
+      with:
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
+        repository: homqyy/gitea
+        readme-filepath: ./gitea/README.md
+
   build-gitea-CN:
     runs-on: ubuntu-latest
     env:
