--- a/gitea/Dockerfile
+++ b/gitea/Dockerfile
@@ -9,14 +9,20 @@ RUN if [ "$COUNTRY" = "CN" ]; then \
         && sh china-mirror/os.sh; \
     fi
 
-# Support .ipynb
-RUN apk add --no-cache python3 py3-pip
+# Basic: refers to https://docs.gitea.com/administration/external-renderers
+RUN apk --no-cache add asciidoctor freetype freetype-dev gcc g++ libpng libffi-dev py-pip python3-dev py3-pip py3-pyzmq
 
 # if country is CN, replace the pip mirror
 RUN if [ "$COUNTRY" = "CN" ]; then \
         sh china-mirror/pypi.sh; \
     fi
 
+# Basic: refers to https://docs.gitea.com/administration/external-renderers
+RUN pip3 install --upgrade pip
+RUN pip3 install -U setuptools
+RUN pip3 install jupyter docutils
+
+# Support .ipynb
 RUN pip3 install nbconvert
 
 # cleanup
