--- a/.github/workflows/gitea.yml
+++ b/.github/workflows/gitea.yml
@@ -1,4 +1,4 @@
-name: Docker Image CI
+name: gitea Docker Image CI
 
 on:
   push:
@@ -21,7 +21,7 @@ jobs:
     - name: Push the Docker image
       run: |
         echo ${{ secrets.DOCKER_PASSWORD }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
-        docker push ${{ env.DOCKER_NAME }}:${{ env.DOCKER_VERSION }}-${{ env.DOCKER_TAG}}
+        docker push ${{ env.DOCKER_NAME }}:${{ env.DOCKER_VERSION }}-${{ env.DOCKER_TAG }}
         docker push ${{ env.DOCKER_NAME }}:latest
     - name: Docker Hub Description
       uses: peter-evans/dockerhub-description@v4
