fixed alpine: no curl

--- a/alpine/Dockerfile
+++ b/alpine/Dockerfile
@@ -5,7 +5,8 @@ USER root
 
 # if country is CN, replace the mirror
 RUN if [ "$COUNTRY" = "CN" ]; then \
-        curl -sSL https://raw.githubusercontent.com/Homqyy/china-mirror/main/os.sh | sh; \
+        wget -qO- https://raw.githubusercontent.com/Homqyy/china-mirror/main/os.sh | sh; \
+            || { echo "Failed to replace mirror"; exit 1; }; \
     fi
 
 # cleanup
