exec script of chian-mirror with bash

--- a/alpine/Dockerfile
+++ b/alpine/Dockerfile
@@ -3,12 +3,12 @@ ARG COUNTRY=
 
 USER root
 
-RUN apk add --no-cache git
+RUN apk add --no-cache git bash
 
 # if country is CN, replace the mirror
 RUN if [ "$COUNTRY" = "CN" ]; then \
         git clone https://github.com/Homqyy/china-mirror \
-        && sh china-mirror/os.sh; \
+        && bash china-mirror/os.sh; \
     fi
 
 # cleanup
