--- a/ubuntu/Dockerfile.2204
+++ b/ubuntu/Dockerfile.2204
@@ -8,7 +8,7 @@ RUN apt-get update && apt-get install -y git
 # if country is CN, replace the mirror
 RUN if [ "$COUNTRY" = "CN" ]; then \
         git clone https://github.com/Homqyy/china-mirror \
-        && sh china-mirror/os.sh; \
+        && bash china-mirror/os.sh; \
     fi
 
 # cleanup
